# coverletter_assistant

./: .gitignore  cover_letter.sync.ipynb  cover_letter.sync.py  pyproject.toml
aipg/: ai_request.py  data_utils.py  logger.py
