[tool.poetry]
name = "aipg"
version = "0.1.0"
description = ""
authors = ["Andrew Alderfer <drew@drewalderfer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
tiktoken = "^0.3.3"
polars = "^0.17.6"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
notebook = "^6.5.4"
jupyter-contrib-nbextensions = "^0.7.0"
jsonschema = {extras = ["format-nongpl"], version = "^4.17.3"}
jupytext = "^1.14.5"
jsonrpcclient = "^4.0.3"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "./.ipynb_checkpoints",
]
venvPath = "/home/drew/.cache/pypoetry/virtualenvs"
venv = "aipg-8e5V84G1-py3.11"

reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
